Use hyperparameter values in filenames
Use tunable hyperparameter values in output files' name.
Change structure of config.py to include separate parameter values
for each agents and environment.

--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,8 @@ BananaCollector/Banana_Linux/
 # IPython checkpoints
 **/.ipynb_checkpoints
 
-# VS code temp files
+# VS code files
 **/.vscode/
+
+# Pycharm files
+**/.idea/
