feat: Add Reacher project skeleton

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # Unity environment
 #navigation/Banana_Linux/
 BananaCollector/Banana_Linux/
+Reacher/Reacher_Linux/
 
 # Python binaries
 **/__pycache__/
