feat: Add MADDPG agent

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 #navigation/Banana_Linux/
 BananaCollector/Banana_Linux/
 Reacher/Reacher_Linux/
+Tennis/Tennis_Linux/
 
 # Python binaries
 **/__pycache__/
